# apple-oidc-adapter

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  apple-developer-domain-association.txt  deploy.sh  deploy.yaml
src/: main.rs
