[package]
name = "apple-oidc-adapter"
version = "1.0.0"
authors = ["Q <q@misell.cymru>"]
edition = "2018"

[dependencies]
actix = "0.13"
actix-web = "4"
dotenv = "0.15"
pretty_env_logger = "0.5"
listenfd = "1"
urlencoding = "2"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
openssl = "0.10"
failure = "0.1"
openssl-probe = "0.1.2"